--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
 }
 
 header img {
-  margin-bottom: 3.2rem;
+  margin-bottom: 2.2rem;
   margin-top: 3.2rem;
 }
 
@@ -60,7 +60,8 @@ header h1 {
   letter-spacing: 0.1em;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 
-  padding-bottom: 43px;
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
 
   height: 4.9rem;
 
